--- a/templates/home.html
+++ b/templates/home.html
@@ -31,7 +31,7 @@
   <form action="/" method="POST">
     
   <div class="row">
-      <textarea id="message" name="message" placeholder="Write something.." style="height:150px"></textarea>
+      <textarea id="message" name="message" placeholder="Enter the news title/summary to classify.." style="height:150px"></textarea>
   </div>
   <div class="row">
     
